# serial-comm-py-lib

./: LICENSE  README.md  pyproject.toml  serial_comm_py_lib.py  usage_example.py
scripts/: serial_test.py
src/serial_comm_py_lib/: __init__.py  serial_comm_py_lib.py
