[project]
name = "serial-comm-py-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adi_Dell", email = "adithyasrinath98@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
]

[project.scripts]
serial-comm-py-lib = "serial_comm_py_lib:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
